v1.2
 - Fixed bugs: github#11, github#22, github#24

v1.1
 - Fixed bugs: github#13, github#14, github#17, github#19, github#20
 - Displaying file hash in the new update dialog

v1.0
 - User auth using HTTPS
 - Disabled Gmail/Gtalk option for DA contest
 - Clearing score and stats on user account change

v0.27
 - Added checkbox in the options window to enable/disable higher
   priority to rules in on the current 'topic'
 - Improved stats & remote logging
 - Improved security in SecureStatsFile by adding a hash signature
 - Verifying SSL handshake in Updater
 - Embedding CA Certs in binary file
 - Added licences files in linux32 and win32 packages. Removed changelog.

v0.26
 - Added simple crash handler
 - Fixed bugs #27, #35
 
v0.25
 - Added verification of updates
 - Blocking chatbot connection and score upload if there is a critical
   update
 - Saving rosters inside the rules file
 - Saving stats and history in a new folder named <chatbot_basename>_extras
 - By default, saving chatbot files in Documents/Chatbots
 - Finished score algorithm

v0.24
 - Added authentication against 'Dale Aceptar' server.
 - Removed script to launch the application on Linux package
 
v0.23
 - Improved NLP engine: 
    - Added higher priority to those rules that match the current 'topic' 
    - Added support for literal strings (Exact match support)
 - When creating a new chatbot, added file dialog to ask filename
 - Fixed bugs #33, #34

v0.22
 - Fixed several bugs in the score algorithm
 - Improved score algorithm by adding detection of user interference 
   in chatbot conversations. Also not scoring duplicated rules.
 - Fixed bug #32

v0.21
 - Added 'Dale Aceptar' link in welcome window
 - Fixed bug #31

v0.20
 - New welcome window
 - Updated 'Options' window tooltips
 - Updated status icons in the connection tab
 - Added encryption support to send scores to the server
 - Fixed bugs #28, #29, #30

v0.19
 - Added status icons in the connection tab