@@ -2,6 +2,6 @@
 <update>
   <version>1.5</version>
   <date>28/10/2012</date>
-  <critical>no</critical>
+  <lastcritical>1.5</lastcritical>
   <url>http://lvklabs.com/builds/chatbot/chatbot-linux32-0.23.zip</url
 </update> 
