@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <update>
-  <whatsnew></whatsnew><critical>yes</critical><date>18/01/2011</date><version>1.1</version><url>http://lvklabs.com/builds/chatbot/chatbot-linux32-0.23.zip</url>
+  <whatsnew></whatsnew><critical>yes</critical><lastcritical>1.1</lastcritical><date>18/01/2011</date><version>1.1</version><url>http://lvklabs.com/builds/chatbot/chatbot-linux32-0.23.zip</url>
 </update>
 
