@@ -3,7 +3,7 @@
   <version>     2.0</version>
   <date>  28/10/2012   </date>
         
-  <critical>    no</critical>
+  <lastcritical>1.9</lastcritical>
   <url>  http://lvklabs.com/builds/chatbot/chatbot-linux32-0.23.zip  </url>
 
 
