@@ -5,6 +5,10 @@
   <critical>yes</critical>
   <lastcritical>1.3</lastcritical>
   <url>http://lvklabs.com/builds/chatbot/chatbot-linux32-0.23.zip</url>
-  <whatsnew><li>Hi!</li></whatsnew>
+  <whatsnew>
+    <li version="1.2">Some stuff 1</li>
+    <li version="1.3">Some stuff 2</li>
+    <li version="1.4">Some stuff 3</li>
+  </whatsnew>
   <hash>ce286df1e54f176ca76a8020a1ae3b464223fc0f</hash>
 </update>
